added native module

--- a/native/pom.xml
+++ b/native/pom.xml
@@ -4,9 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.vayzd</groupId>
-    <artifactId>orbit</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <parent>
+        <groupId>net.vayzd</groupId>
+        <artifactId>orbit</artifactId>
+        <version>0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 
+    <artifactId>native</artifactId>
+    <packaging>jar</packaging>
+    <version>${parent.version}</version>
 
 </project>
