--- a/database/pom.xml
+++ b/database/pom.xml
@@ -14,4 +14,14 @@
     <artifactId>database</artifactId>
     <packaging>jar</packaging>
     <version>${parent.version}</version>
+
+    <dependencies>
+        <!-- HikariCP (JDBC connection pool) -->
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <scope>compile</scope>
+            <version>2.5.1</version>
+        </dependency>
+    </dependencies>
 </project>
