--- a/spigot/pom.xml
+++ b/spigot/pom.xml
@@ -14,4 +14,27 @@
     <artifactId>spigot</artifactId>
     <packaging>jar</packaging>
     <version>${parent.version}</version>
+
+    <repositories>
+        <!-- SpigotMC Repository -->
+        <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+    </repositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <scope>provided</scope>
+            <version>1.11-R0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>net.vayzd</groupId>
+            <artifactId>database</artifactId>
+            <scope>compile</scope>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
