--- a/pom.xml
+++ b/pom.xml
@@ -53,12 +53,12 @@
             <scope>provided</scope>
             <version>1.16.10</version>
         </dependency>
-        <!-- Google Guava -->
+        <!-- Caffeine Caching -->
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
             <scope>compile</scope>
-            <version>18.0</version>
+            <version>2.3.5</version>
         </dependency>
         <!-- Junit Testing -->
         <dependency>
