compiling org.slf4j.slf4j-jdk14 library to remove console error

--- a/database/pom.xml
+++ b/database/pom.xml
@@ -23,6 +23,13 @@
             <scope>compile</scope>
             <version>1.4.2</version>
         </dependency>
+        <!-- Required by HikariCP -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <scope>compile</scope>
+            <version>1.7.19</version>
+        </dependency>
         <!-- HikariCP (JDBC connection pool) -->
         <dependency>
             <groupId>com.zaxxer</groupId>
