--- a/api/pom.xml
+++ b/api/pom.xml
@@ -11,7 +11,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>api</artifactId>
+    <artifactId>orbit-api</artifactId>
     <packaging>jar</packaging>
     <version>${parent.version}</version>
 
