--- a/protocol/pom.xml
+++ b/protocol/pom.xml
@@ -11,8 +11,16 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>native</artifactId>
+    <artifactId>orbit-protocol</artifactId>
     <packaging>jar</packaging>
     <version>${parent.version}</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <scope>compile</scope>
+            <version>${netty.version}</version>
+        </dependency>
+    </dependencies>
 </project>
