--- a/proxy/pom.xml
+++ b/proxy/pom.xml
@@ -11,7 +11,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>proxy</artifactId>
+    <artifactId>orbit-proxy</artifactId>
     <packaging>jar</packaging>
     <version>${parent.version}</version>
 </project>
