--- a/datastore/pom.xml
+++ b/datastore/pom.xml
@@ -13,7 +13,7 @@
 
     <artifactId>orbit-datastore</artifactId>
     <packaging>jar</packaging>
-    <version>${parent.version}</version>
+    <version>1.12-SNAPSHOT</version>
 
     <dependencies>
         <!-- Google Guava Library -->
